[tool.poetry]
name = "oil-gas-history"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
plotly = "^5.11.0"
nbformat = "^5.7.0"
ipykernel = "^6.17.1"
black = "^22.10.0"
statsmodels = "^0.13.5"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
